--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-
+pysqlite3-binary
 langchain 
 langchain-community
 langchain-text-splitters
-langchain-chroma==0.3.29
+langchain-chroma
 langchain-cohere
 langchain-google-genai
 bs4
